fix(button): add rotation to remove clipping of button

--- a/components/case-extract/case-extract.less
+++ b/components/case-extract/case-extract.less
@@ -94,23 +94,20 @@
 .case-extract-button-container {
 		margin: 30px 0 0 0;
 
-		& > .btn-tertiary .icon {
+		& > .btn-tertiary .icon svg {
 			margin-top: 0;
 			height: 37px;
 			width: 37px;
-			transform: rotate(-90deg);
+			transform: rotate(-91deg);
 		}
 		
 		@media @screen-large {
-			margin-top: 0;
 			margin-bottom: 60px;
 	
-			& > .btn-tertiary .icon{
-				margin-top: 0;
+			& > .btn-tertiary .icon svg{
 				height: 50px;
 				width: 50px;
-				
-				transform: rotate(-90deg);
+				transform: rotate(-91deg);
 			}
 		}
 }
